[gd_scene load_steps=3 format=3 uid="uid://cqxv2e1rn7uqx"]

[ext_resource type="Script" path="res://src/ui/victory_screen.gd" id="1_2odf0"]
[ext_resource type="AudioStream" uid="uid://bukb5uav51053" path="res://assets/sounds/oh-yeah.mp3" id="2_a2cly"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2odf0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.027451, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.5
offset_right = 439.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BigMarging"

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"TitleLabel"
text = "Victory!"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer2"]
layout_mode = 2

[node name="VictoryLabel" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "You have made it! You have faced numerous monsters , found the quest item, and came back alive!"
autowrap_mode = 2

[node name="EndingLabel" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Retznac vanished into oblivion leaving a thin trail of mist behind. It reminds you of the marshes around the river Rh√¥ne at sunrise."
autowrap_mode = 2

[node name="GameSummaryLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "You defeated:
[ul]
a cat
a dog
a snake
[/ul]"
fit_content = true

[node name="NextChapterLabel" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Even though you are expected to celebrate a litte bit at this point, don't be too long at it because we still need you for the next chapter of this adventure."
autowrap_mode = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "This time it's truly the end, at least until the next version of this game. Great job on emerging victor and thank you for playing!"
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Nice!"

[node name="NextButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Next..."

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a2cly")

[connection signal="button_up" from="VBoxContainer/MarginContainer2/HBoxContainer/QuitButton" to="." method="show_main_screen"]
[connection signal="button_up" from="VBoxContainer/MarginContainer2/HBoxContainer/NextButton" to="." method="_on_next_button_button_up"]
